--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint:fix": "eslint '**/*.{js,jsx}' --fix",
     "postinstall": "husky install"
   },
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.7.2"
+  },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.20.0",
