--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "postinstall": "husky install"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
-    "react-router-dom": "^5.2.0"
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
